bpo-31740: Prevent refleaks when sqlite3.Connection.__init__() is called more than once (GH-3944)